@@ -1,11 +1,11 @@
 .\"     Title: pam\-config
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.71.1 <http://docbook.sf.net/>
-.\"      Date: 07/31/2007
+.\"      Date: 08/07/2007
 .\"    Manual: Reference Manual
 .\"    Source: Reference Manual
 .\"
-.TH "PAM\-CONFIG" "8" "07/31/2007" "Reference Manual" "Reference Manual"
+.TH "PAM\-CONFIG" "8" "08/07/2007" "Reference Manual" "Reference Manual"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -470,6 +470,18 @@ option to all pam_winbind.so invocations.
 .PP
 These modules can only be added to single service files. See also
 the section called \(lqUSAGE EXAMPLES\(rq.
+.PP
+\fB\-\-ck_connector\fR
+.RS 4
+Add pam_ck_connector.so to session section of the specified service file.
+.RE
+.PP
+\fB\-\-ck_connector\-debug\fR
+.RS 4
+Add
+\fBdebug\fR
+to any invocation of pam_ck_connector.so in the specified service file.
+.RE
 .PP
 \fB\-\-cryptpass\fR
 .RS 4
